# coffeecom-backend

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS.md  Dockerfile  README.md  add_coffee_direct.py  add_coffee_products.py  add_test_user.py  add_test_user_fixed.py  coffeecom-apidog-collection.json  db_check.py  docker-compose.yml  koyeb.yaml  openapi.json  pyproject.toml  requirements.txt  run.py  run_postgres.py  set_db.py  swagger.yaml  test_api.py  test_api_endpoints.py  test_app.py  test_db.py
.github/workflows/: ci-cd.yml  deploy.yml
app/: __init__.py  config.py  database.py
app/models/: __init__.py  cart.py  cart_item.py  category.py  inventory.py  order.py  order_item.py  product.py  review.py  transaction.py  user.py
app/routes/: __init__.py  admin.py  auth.py  cart.py  category.py  dashboard.py  debug.py  monitoring.py  order.py  product.py  transaction.py  user.py
app/templates/: dashboard.html  index.html  login.html  register.html
app/templates/errors/: 404.html  500.html
migrations/versions/: 4d1b0fec7e21_initial_migration.py  b6fa091b3e39_increase_password_hash_length.py
tests/: test_basic.py
